--- a/Staff/src/main/res/layout/activity_to_do.xml
+++ b/Staff/src/main/res/layout/activity_to_do.xml
@@ -77,18 +77,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/rv_todo_list" />
 
-    <com.github.clans.fab.FloatingActionButton
-        android:id="@+id/fab_add_todo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:src="@drawable/ic_add"
-        app:fab_colorNormal="@color/secondaryColor"
-        app:fab_colorPressed="@color/secondaryDarkColor"
-        app:fab_colorRipple="@color/secondaryColor"
-        app:fab_label="@string/login_webapp"
-        app:fab_size="normal"
+    <com.nambimobile.widgets.efab.ExpandableFabLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.nambimobile.widgets.efab.ExpandableFab
+            android:id="@+id/fab_add_todo"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="12dp"
+            app:efab_fabOptionSize="custom"
+            app:efab_iconAnimationRotationDeg="0"
+            app:efab_icon="@drawable/ic_add"
+            app:efab_size="custom"
+            app:fabCustomSize="60dp"
+            app:maxImageSize="32dp" />
+
+    </com.nambimobile.widgets.efab.ExpandableFabLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
